# journal_article-2

./: .gitignore  AGENTS.md  PLAN.md  README.md  TECSF_完整学术论文.md  TECSF_标准算例弱项与代码优化分析.md  TECSF_论文实验方案精简优化建议.md  pyproject.toml  实验方案.md  摘要-引言草稿.md  方法草稿.md  期刊论文-2-创新思路.docx  面向 P2P 低碳能源交易的低碳资产感知的 MAPPO 算法.md
configs/: default.yaml  experiment_protocol.yaml  ieee33bw_2000ep.yaml  ieee33bw_p2p_bonus.yaml  ieee33bw_p2p_final.yaml  ieee33bw_p2p_fix.yaml  ieee33bw_p2p_lccoin.yaml  ieee69_2000ep.yaml
docs/: README.md  experiment_protocol_mappo_10000ep_20260705.md
scripts/: _experiment_utils.py  analyze_experiment_statistics.py  analyze_pareto_front.py  check_experiment_acceptance.py  create_benchmark_profile.py  evaluate.py  export_ledger.py  figure_style.py  launch_ieee_5000.bat  launch_ieee_parallel.ps1  launch_ieee_parallel.py  monitor_ieee_training.py  plot_5000ep_training.py  plot_comparison_mappo_vs_lcmappo.py  plot_experiment_results.py  plot_ieee33_curve.py  plot_ieee33_training_curves.py  plot_ieee69_and_comparison.py  plot_ieee_benchmark_paper_figure.py  plot_lc_mappo_multiseed_curves.py  plot_multiseed_training.py  plot_p2p_grid_comparison.py  plot_paper_figures.py  plot_reward_decomposition.py  plot_settlement_stress.py  plot_training_convergence.py  prepare_ieee_benchmark_configs.py  run_experiments.py  run_full_experiments_20260703.cmd  run_full_experiments_20260703.py  run_ieee_benchmark_nohup.sh  run_ieee_parallel_5000.sh  run_improved_experiment_suite.py  run_lc_mappo_multiseed_10000.py  run_lccoins_sensitivity.py  run_multiseed_experiments.py  (+7 more)
(+39 files in other folders)
