[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tecsf"
version = "0.1.0"
description = "Trusted energy-carbon co-settlement feedback experiments for P2P prosumer trading."
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "matplotlib",
    "numpy",
    "pyyaml",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
